--- a/gss2018.rmd
+++ b/gss2018.rmd
@@ -24,16 +24,34 @@ source("GrabData.R")
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
 
 The data in the dataframe GSSdata is from the 2018 General Social Survey. The first blocks of R-code has selected down a subset of the data to just 16 variables. It has further removed unwanted factor levels in much of the data. Examine the code in the GrabData.R file to see what it is doing. Some of the variables are categorical and others are numerical. Be sure to do a variable analysis before tackling each question.  
+
+
 First question - Is opinion on the death penalty (CAPPUN) independent of gun ownership (OWNGUN)?
 
+
+$H_0$: opinion on capital punishment is independent of gun ownership
+
+$H_A: opinion on..
 
 ## Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
 
+OWNGUN is categorical, CAPPUN is also categorical
+
+
+We want CPPUN ~ OWNGUN
+The helper file we use is CAT~CAT
+
+
+
 ##Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
+
+
+
+
 
 ### Descriptive Results
 
@@ -41,9 +59,21 @@ First question - Is opinion on the death penalty (CAPPUN) independent of gun own
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+barchartGC(~CAPPUN + OWNGUN,data=GSSdata)
+barchartGC(~CAPPUN + OWNGUN,data=GSSdata, type="percent")
+
+```
+This graph shows that people who own a gunn are more likely to favor capital punishment
 #### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+```{r}
+table1 <- xtabs(~CAPPUN + OWNGUN,data=GSSdata)
+rowPerc(table1)
+colPerc(table1)
+```
 
 ### Inferential Results
 
