--- a/gss2018.rmd
+++ b/gss2018.rmd
@@ -74,10 +74,21 @@ table1 <- xtabs(~CAPPUN + OWNGUN,data=GSSdata)
 rowPerc(table1)
 colPerc(table1)
 ```
-
+numerical summary shows that 75% of gun owners favor CAPPUN
 ### Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+The Chi-squared test p-value is 0.0202, Hence we reject the null hypothesis and conclude that gun ownership and capital punishment are not independent
+
+The fisherexact test has a p-value of .01651 hence we reject the null hypothesis, as with the chi square test, and furthermore the odds ratio says that gunowners are 2.3 times more likely to favor captia punishment that those who dont own a gun
+
+
 
 #  Question 2
 
@@ -138,5 +149,8 @@ Determine if a persons performance on the wordsum test (WORDSUM) is independent 
 
 # Discussion and Conclusion
 
+### Quesion 1: is gun ownership independent of opinon on capital punishment. 
+
+The summary results and the inferential results shows that they are not independent.
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
